--- a/scss/main.scss
+++ b/scss/main.scss
@@ -187,6 +187,12 @@ html {
 @media screen and (max-width:767px)
 {
 
+    .main-title
+    {
+        font-size: 2.3rem;
+    }
+
+
     .rectangulo
     {
         border: 2px solid $soft-white;
